--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "node ./src/index.js"
+    "start-dev": "NODE_ENV=dev node ./src/index.js",
+    "test": "NODE_ENV=test mocha --recursive -R min"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "helmet": "^3.15.0",
+    "mongoose": "^5.3.13",
     "redis": "^2.8.0"
+  },
+  "devDependencies": {
+    "mocha": "^5.2.0",
+    "supertest": "^3.3.0"
   }
 }
